# my-messaging-app

./: script.sh
whatsapp_flutter_client/: README.md  pubspec.yaml
whatsapp_flutter_client/android/app/: build.gradle.kts
whatsapp_flutter_client/ios/Runner/: Info.plist
whatsapp_flutter_client/ios/Runner.xcodeproj/: project.pbxproj
whatsapp_flutter_client/lib/: main.dart
whatsapp_flutter_client/lib/core/services/: service_locator.dart
whatsapp_flutter_client/lib/data/datasources/: auth_api_client.dart  websocket_service.dart
whatsapp_flutter_client/lib/data/models/: chat_message.dart  conversation.dart
whatsapp_flutter_client/lib/data/repositories/: auth_repository.dart  (+1 more)
whatsapp_flutter_client/linux/: CMakeLists.txt
whatsapp_flutter_client/linux/runner/: my_application.cc
whatsapp_flutter_client/macos/Runner.xcodeproj/: project.pbxproj
whatsapp_flutter_client/test/: widget_test.dart
whatsapp_flutter_client/web/: index.html  manifest.json
whatsapp_flutter_client/windows/: CMakeLists.txt
whatsapp_flutter_client/windows/runner/: Runner.rc  main.cpp
whatsapp_rust_backend/: .env  Cargo.toml  script  script.sh
whatsapp_rust_backend/migrations/: 20230101000001_initial_schema.sql
whatsapp_rust_backend/src/: main.rs
whatsapp_rust_backend/src/actors/: mod.rs  server.rs  session.rs
whatsapp_rust_backend/src/handlers/: auth_handler.rs  conversation_handler.rs  media_handler.rs  mod.rs  qr_auth_handler.rs  user_handler.rs  ws_handler.rs
whatsapp_rust_backend/src/models/: mod.rs
whatsapp_rust_backend/src/utils/: auth_middleware.rs  jwt.rs
(+18 files in other folders)
