[package]
name = "whatsapp_rust_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4.3"
actix-web-actors = "4.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.3"
bcrypt = "0.14"
rand = "0.8"
uuid = { version = "1.3", features = ["v4", "serde"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
aws-config = "0.56"
aws-sdk-s3 = "0.33"
http = "0.2.9"
anyhow = "1.0"
futures = "0.3"
actix-cors = "0.6.4"
futures-util = "0.3"
